--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: ruby
 
 rvm:
-  - 2.0.0
   - 2.2.1
   - 2.2.3
 
@@ -13,5 +12,9 @@ sudo: false
 
 notifications:
   slack: elevatorup:hmhUg4Td6NqIGGBW18JltQ79
+
+addons:
+  code_climate:
+    repo_token: 70bb855d43fd2084977765ba11cac1df593df4bc4085fcb9bf39a2d321a20cde
 
 sudo: false
