Updating project settings
- Updating the ruby binding settings to allow for future development to
commence.
- Project wide rubocop
- Using RM.com Rubocop settings file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
+## MISC Blocks
 .idea
 .yardoc
 /log/*
 *.DS_Store
 *sublime-*
+
+## Ignore bundler config
+/.bundle
+
+## Environment configs
 .env.development
 .env.test
+
 coverage/
+*.gem
+
+.rvmrc
