--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -11,7 +11,7 @@ engines:
           mass_threshold: 60
 ratings:
   paths:
-    - app/**
+    - lib/**
     - "**.rb"
 exclude_paths:
   - spec/**/*
