Captain API V2 Update Enable options for disabling The Captain
Version bump

Readme version update

Update Author last name

Remove travis 2.2.1 ruby version

only build for master and PR's

run specs on ruby v2

Add testing for latest ruby versions

update rspec & remove unused factory girl

Update Version and ruby version requirements

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 language: ruby
 rvm:
-  - 2.2.1
-  - 2.2.3
-
-cache: bundler
+  - 2.2.7
+  - 2.3.4
 
 sudo: false
+
+cache:
+  - bundler
+
+branches:
+  only:
+    - master
 
 notifications:
   slack: elevatorup:hmhUg4Td6NqIGGBW18JltQ79
